component page for examples

--- a/_data/collapsible_data.yml
+++ b/_data/collapsible_data.yml
@@ -1,4 +1,4 @@
-posts:
+collapsible_data:
   - title: "hello world"
     description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                   sed do eiusmod tempor incididunt ut labore et dolore magna 
