--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
-remote_theme: deniak/w3c-jekyll-theme
+remote_theme: w3c/w3c-jekyll-theme
 plugins:
 - jekyll-remote-theme
 - jekyll-redirect-from
+markdown: CommonMarkGhPages
+titles_from_headings:
+  enabled:     true
+  strip_title: true
+  collections: false
+toc:
+  max_level: 2
